testdata/fixtures/audit/positive/eval_user_input_py_variable.py
def run_expression(user_input):
    return eval(user_input)
