testdata/fixtures/audit/negative/eval_user_input_neg_not_eval_call_py.py
def evaluate(user_input):
    return process(user_input)
